libdatetime-calendar-discordian-perl (0.9.7-1) lucid; urgency=low

  * New upstream version. 
  * Miscapitalization of days_till_x fixed (Closes: #591910)

 -- Jaldhar H. Vyas <jaldhar@debian.org>  Sat, 07 Aug 2010 11:44:44 -0400

libdatetime-calendar-discordian-perl (0.9.6-1) unstable; urgency=low

  * New upstream version.

 -- Jaldhar H. Vyas <jaldhar@debian.org>  Thu, 06 Mar 2008 08:17:12 -0500

libdatetime-calendar-discordian-perl (0.9.5-1) unstable; urgency=low

  * New upstream version.
  * No longer creates or tries to remove an empty /usr/lib/perl5 
    (Closes: #467745)

 -- Jaldhar H. Vyas <jaldhar@debian.org>  Tue, 04 Mar 2008 02:11:09 -0500

libdatetime-calendar-discordian-perl (0.9.4-1) unstable; urgency=low

  * New upstream version.
    +  Fixes a problem where the module was giving 0 as the day number 
       around season boundaries. (Closes: #381793)
  * Package is not debian native anymore.
  * Updated standards version.

 -- Jaldhar H. Vyas <jaldhar@debian.org>  Sat,  9 Sep 2006 16:18:27 -0400

libdatetime-calendar-discordian-perl (0.9.2) unstable; urgency=low

  * New upstream version.  Fixes off by one error in conversion of 
    St. Tib's Day to RD date. (Closes: #275172)

 -- Jaldhar H. Vyas <jaldhar@debian.org>  Wed,  6 Oct 2004 16:00:51 -0400

libdatetime-calendar-discordian-perl (0.9.1) unstable; urgency=low

  * Initial upload to Debian.  (Closes: #254046)

 -- Jaldhar H. Vyas <jaldhar@debian.org>  Sat, 12 Jun 2004 13:57:25 -0400

libdatetime-calendar-discordian-perl (0.9.0) unstable; urgency=low

  * Second non-release.

 -- Jaldhar H. Vyas <jaldhar@debian.org>  Fri, 11 Jun 2004 16:19:07 -0400

libdatetime-calendar-discordian-perl (0.8) unstable; urgency=low

  * Initial non-release.

 -- Jaldhar H. Vyas <jaldhar@debian.org>  Thu, 10 Jun 2004 07:44:18 -0400
